--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-flask
+fastapi
+uvicorn
+google-api-python-client
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
-google-api-python-client
+requests
