--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-flask==3.0.0
-gunicorn==21.2.0
-flask
-gunicorn
+fastapi
 uvicorn
 requests
 python-dotenv
+google-api-python-client
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
