--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn reflector_api:app --host 0.0.0.0 --port 10000
+    uvicorn reflector_api:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: REFLECTOR_API_KEY
         sync: false
